{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 12,
  "lineage": "848dee34-2fee-eaaa-5257-933941e9a453",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:752932887110:instance/i-0f200370a69587ac4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f200370a69587ac4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a82142af5c166057",
            "private_dns": "ip-10-1-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.22",
            "public_ip": "54.226.116.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021cd33a31308b336",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08713cf2f187f0a55",
            "tags": {
              "Name": "example_ec2"
            },
            "tags_all": {
              "Name": "example_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064ac4abde579734c"
            ]
          },
          "dependencies": [
            "aws_security_group.example_instance_sg1",
            "aws_subnet.example-public_subent_01",
            "aws_vpc.example-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752932887110:internet-gateway/igw-01ce4a7879321d4f7",
            "id": "igw-01ce4a7879321d4f7",
            "owner_id": "752932887110",
            "tags": {
              "Name": "example_IG"
            },
            "tags_all": {
              "Name": "example_IG"
            },
            "vpc_id": "vpc-021856c2dfd90f917"
          },
          "dependencies": [
            "aws_vpc.example-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752932887110:route-table/rtb-03e6d7ae38bdebbcf",
            "id": "rtb-03e6d7ae38bdebbcf",
            "owner_id": "752932887110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ce4a7879321d4f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-public-RT"
            },
            "tags_all": {
              "Name": "example-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-021856c2dfd90f917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example_IG",
            "aws_vpc.example-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bc6d2e6625ce5ae",
            "route_table_id": "rtb-03e6d7ae38bdebbcf",
            "subnet_id": "subnet-08713cf2f187f0a55"
          },
          "dependencies": [
            "aws_internet_gateway.example_IG",
            "aws_route_table.example-public-RT",
            "aws_subnet.example-public_subent_01",
            "aws_vpc.example-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_instance_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752932887110:security-group/sg-064ac4abde579734c",
            "description": "Security group for EC2 instance",
            "egress": [],
            "id": "sg-064ac4abde579734c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-instance-sg",
            "name_prefix": "",
            "owner_id": "752932887110",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021856c2dfd90f917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example-public_subent_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752932887110:subnet/subnet-08713cf2f187f0a55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08713cf2f187f0a55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752932887110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public_subent_01"
            },
            "tags_all": {
              "Name": "example-public_subent_01"
            },
            "vpc_id": "vpc-021856c2dfd90f917"
          },
          "dependencies": [
            "aws_vpc.example-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752932887110:vpc/vpc-021856c2dfd90f917",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d7dc4ba5640353de",
            "default_route_table_id": "rtb-058a4e8323ff97f01",
            "default_security_group_id": "sg-06c75f442cf5c23a9",
            "dhcp_options_id": "dopt-0e218121a61f42cb9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021856c2dfd90f917",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058a4e8323ff97f01",
            "owner_id": "752932887110",
            "tags": {
              "Name": "eg-vpc"
            },
            "tags_all": {
              "Name": "eg-vpc"
            }
          }
        }
      ]
    }
  ]
}